Use FEniCS 2017.2.0 base until python3 support (python2 support has been removed from FEniCS 2018)

--- a/Docker/dolfin_dic-dev/Dockerfile
+++ b/Docker/dolfin_dic-dev/Dockerfile
@@ -2,8 +2,8 @@
 #FROM quay.io/fenicsproject/stable:2016.1.0
 #FROM quay.io/fenicsproject/stable:2016.2.0
 #FROM quay.io/fenicsproject/stable:2017.1.0
-#FROM quay.io/fenicsproject/stable:2017.2.0
-FROM quay.io/fenicsproject/stable:current
+FROM quay.io/fenicsproject/stable:2017.2.0
+#FROM quay.io/fenicsproject/stable:current
 #FROM quay.io/fenicsproject/stable:latest
 
 #USER root
