dolfin_dic now requires dolfin_cm

--- a/Docker/dolfin_dic/Dockerfile
+++ b/Docker/dolfin_dic/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /home/fenics/code
 RUN git clone https://github.com/mgenet/myPythonLibrary.git
 RUN git clone https://github.com/mgenet/myVTKPythonLibrary.git
 RUN git clone https://github.com/mgenet/vtkpython_cbl.git
+RUN git clone https://bitbucket.org/mgenet/dolfin_cm.git
 RUN git clone https://bitbucket.org/mgenet/dolfin_dic.git
