Use INRIA GitLab repos

--- a/Docker/dolfin_dic/Dockerfile
+++ b/Docker/dolfin_dic/Dockerfile
@@ -1,8 +1,8 @@
 FROM dolfin_dic-dev
 
 WORKDIR /home/fenics/code
-RUN git clone https://github.com/mgenet/myPythonLibrary.git
-RUN git clone https://github.com/mgenet/myVTKPythonLibrary.git
-RUN git clone https://github.com/mgenet/vtkpython_cbl.git
-RUN git clone https://bitbucket.org/mgenet/dolfin_cm.git
-RUN git clone https://bitbucket.org/mgenet/dolfin_dic.git
+RUN git clone https://gitlab.inria.fr/mgenet/myPythonLibrary.git
+RUN git clone https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git
+RUN git clone https://gitlab.inria.fr/mgenet/vtkpython_cbl.git
+RUN git clone https://gitlab.inria.fr/mgenet/dolfin_cm.git
+RUN git clone https://gitlab.inria.fr/mgenet/dolfin_dic.git
