Add dolfin_adjoint, CMA & NLOPT to Dockerfile

--- a/Docker/dolfin_dic-dev/Dockerfile
+++ b/Docker/dolfin_dic-dev/Dockerfile
@@ -10,6 +10,10 @@ WORKDIR /home/fenics
 RUN git clone https://github.com/aschn/gnuplot-colorbrewer.git
 RUN echo "set loadpath \"/home/fenics/gnuplot-colorbrewer/diverging:/home/fenics/gnuplot-colorbrewer/qualitative:/home/fenics/gnuplot-colorbrewer/sequential\"" > .gnuplot
 
+RUN pip3 install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0
+RUN pip3 install cma
+RUN pip3 install nlopt
+
 WORKDIR /home/fenics
 RUN mkdir code
 ENV PYTHONPATH=/home/fenics/code:$PYTHONPATH
