Add sklearn to DockerFile

--- a/Docker/dolfin_dic-dev/Dockerfile
+++ b/Docker/dolfin_dic-dev/Dockerfile
@@ -18,7 +18,7 @@ RUN git clone https://github.com/aschn/gnuplot-colorbrewer.git
 RUN echo "set loadpath \"/home/fenics/gnuplot-colorbrewer/diverging:/home/fenics/gnuplot-colorbrewer/qualitative:/home/fenics/gnuplot-colorbrewer/sequential\"" > .gnuplot
 
 # optimization stuff
-RUN pip3 install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0 cma nlopt
+RUN pip3 install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0 cma nlopt sklearn
 
 # environment setup
 WORKDIR /home/fenics
