--- a/Docker/dolfin_dic-dev-2017.2.0/Dockerfile
+++ b/Docker/dolfin_dic-dev-2017.2.0/Dockerfile
@@ -19,6 +19,7 @@ FROM quay.io/fenicsproject/stable:2017.2.0
 #RUN apt-get update; apt-get install -y fenics; apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN apt-get update; apt-get -y install python-future python-numpy; apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN pip install numpy==1.15
 
 RUN apt-get update; apt-get -y install libvtk6-dev python-vtk6; apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ENV CPATH="/usr/include/vtk-6.2":$CPATH
