--- a/Docker/dolfin_dic-dev/Dockerfile
+++ b/Docker/dolfin_dic-dev/Dockerfile
@@ -24,6 +24,8 @@ RUN pip3 install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0 cm
 WORKDIR /home/fenics
 RUN mkdir code
 ENV PYTHONPATH=/home/fenics/code:$PYTHONPATH
+ENV PYTHONPATH=/home/fenics/code/myPythonLibrary:$PYTHONPATH
+ENV PYTHONPATH=/home/fenics/code/myVTKPythonLibrary:$PYTHONPATH
 ENV PATH=/home/fenics/code/myPythonLibrary/myPythonLibrary:$PATH
 ENV PATH=/home/fenics/code/myVTKPythonLibrary/myVTKPythonLibrary:$PATH
 ENV PATH=/home/fenics/code/vtkpython_cbl:$PATH
