--- a/Docker/dolfin_dic-dev/Dockerfile
+++ b/Docker/dolfin_dic-dev/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update; apt-get -y install rename; apt-get clean; rm -rf /var/lib/ap
 
 # python3 stuff
 RUN apt-get update; apt-get -y install python3-future python3-numpy python3-scipy python3-tk; apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN pip install numpy==1.15
 
 # vtk stuff
 RUN apt-get update; apt-get -y install libvtk7-dev python3-vtk7; apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -18,7 +19,7 @@ RUN git clone https://github.com/aschn/gnuplot-colorbrewer.git
 RUN echo "set loadpath \"/home/fenics/gnuplot-colorbrewer/diverging:/home/fenics/gnuplot-colorbrewer/qualitative:/home/fenics/gnuplot-colorbrewer/sequential\"" > .gnuplot
 
 # optimization stuff
-RUN pip3 install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0 cma nlopt sklearn
+RUN pip install git+https://github.com/dolfin-adjoint/pyadjoint.git@2019.1.0 cma nlopt sklearn
 
 # environment setup
 WORKDIR /home/fenics
