--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,17 @@ build:
   script:
     - echo Docker login
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - echo Build dolfin_dic-2017.2.0-dev
-    - docker build -t $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-2017.2.0-dev -f Docker/dolfin_dic-2017.2.0-dev/Dockerfile .
-    - docker push $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-2017.2.0-dev
-    - echo Build dolfin_dic-2017.2.0
-    - docker build -t $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-2017.2.0 -f Docker/dolfin_dic-2017.2.0/Dockerfile .
-    - docker push $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-2017.2.0
-    - echo Build dolfin_dic-dev
-    - docker build -t $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-dev -f Docker/dolfin_dic-dev/Dockerfile .
-    - docker push $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic-dev
-    - echo Build dolfin_dic
-    - docker build -t $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic -f Docker/dolfin_dic/Dockerfile .
-    - docker push $CI_REGISTRY/mgenet/dolfin_dic/dolfin_dic
+    - echo Build dolfin_warp-2017.2.0-dev
+    - docker build -t $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-2017.2.0-dev -f Docker/dolfin_warp-2017.2.0-dev/Dockerfile .
+    - docker push $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-2017.2.0-dev
+    - echo Build dolfin_warp-2017.2.0
+    - docker build -t $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-2017.2.0 -f Docker/dolfin_warp-2017.2.0/Dockerfile .
+    - docker push $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-2017.2.0
+    - echo Build dolfin_warp-dev
+    - docker build -t $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-dev -f Docker/dolfin_warp-dev/Dockerfile .
+    - docker push $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp-dev
+    - echo Build dolfin_warp
+    - docker build -t $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp -f Docker/dolfin_warp/Dockerfile .
+    - docker push $CI_REGISTRY/mgenet/dolfin_warp/dolfin_warp
     - echo Docker logout
     - docker logout $CI_REGISTRY
