--- a/Docker/dolfin_warp-2017.2.0/Dockerfile
+++ b/Docker/dolfin_warp-2017.2.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.gitlab.inria.fr/mgenet/dolfin_dic/dolfin_dic-dev
+FROM registry.gitlab.inria.fr/mgenet/dolfin_warp/dolfin_warp-2017.2.0-dev
 
 # RUN pip install myPythonLibrary
 # RUN pip install myVTKPythonLibrary
@@ -9,4 +9,4 @@ RUN git clone https://gitlab.inria.fr/mgenet/myPythonLibrary.git
 RUN git clone https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git
 RUN git clone https://gitlab.inria.fr/mgenet/vtkpython_cbl.git
 RUN git clone https://gitlab.inria.fr/mgenet/dolfin_cm.git
-RUN git clone https://gitlab.inria.fr/mgenet/dolfin_dic.git
+RUN git clone https://gitlab.inria.fr/mgenet/dolfin_warp.git
