--- a/Docker/dolfin_warp/Dockerfile
+++ b/Docker/dolfin_warp/Dockerfile
@@ -8,5 +8,5 @@ WORKDIR /home/fenics/code
 RUN git clone https://gitlab.inria.fr/mgenet/myPythonLibrary.git
 RUN git clone https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git
 RUN git clone https://gitlab.inria.fr/mgenet/vtkpython_cbl.git
-RUN git clone https://gitlab.inria.fr/mgenet/dolfin_cm.git
+RUN git clone https://gitlab.inria.fr/mgenet/dolfin_mech.git
 RUN git clone https://gitlab.inria.fr/mgenet/dolfin_warp.git
