--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -32,13 +32,16 @@ jobs:
             xvfb
 
       - name: Install Miniconda
-        run: |
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-          bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-          echo "export PATH=$HOME/miniconda/bin:$PATH" >> $GITHUB_ENV
-          source $GITHUB_ENV
-          eval "$(conda shell.bash hook)"
-          conda init
+        uses: conda-incubator/setup-miniconda@v3
+
+      # - name: Install Miniconda
+      #   run: |
+      #     wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+      #     bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+      #     echo "export PATH=$HOME/miniconda/bin:$PATH" >> $GITHUB_ENV
+      #     source $GITHUB_ENV
+      #     eval "$(conda shell.bash hook)"
+      #     conda init
 
       - name: Set up Conda environment
         run: |
